# SlateOS

./: .gitignore  Aero Desktop (offline).html  CLAUDE.md  Cargo.toml  README.md  answer.md  api.txt  apply_clippy_fixes.py  awaiting-operator.md  boot-test-2cpu.ps1  boot-test-stdio.ps1  boot-test.ps1  boot_test.ps1  build-init.ps1  claude.md.bak  claude_use.txt  convo1.txt  coreutils-canonical-answer.md  design desicions.txt  design-decisions.md  design-review.txt  design.txt  differences from windows.txt  dual_use.txt  effort_level.txt  find_gaps.py  fix_placeholder_tests.py  go.bat  ipc.txt  known-issues.md  limine.conf  loosen_stub_cli_tests.py  manual-testing.txt  memory management.txt  names.txt  net-userspace-migration.md  open-questions.md  operator-answers-2026-06-13.md  os.md  other design decisions.txt  (+16 more)
apps/calculator/: Cargo.toml
apps/calculator/src/: main.rs
apps/contacts/: Cargo.toml
apps/contacts/src/: main.rs
apps/diskcleanup/: Cargo.toml
apps/diskcleanup/src/: main.rs
apps/diskimager/: Cargo.toml
apps/diskimager/src/: main.rs
apps/ebook/: Cargo.toml
apps/ebook/src/: main.rs
apps/editor/: Cargo.toml
apps/editor/src/: highlight.rs  main.rs  syntree.rs
apps/emojipicker/: Cargo.toml
apps/emojipicker/src/: main.rs
apps/explorer/: Cargo.toml
apps/explorer/.cargo/: config.toml
apps/explorer/src/: columns.rs  dropzone.rs  fileops.rs  main.rs  thumbs.rs
apps/filediff/: Cargo.toml
apps/filediff/src/: main.rs
apps/fontmanager/: Cargo.toml
apps/fontmanager/src/: main.rs
apps/hexeditor/: Cargo.toml
apps/hexeditor/src/: main.rs
apps/imageviewer/: Cargo.toml
apps/imageviewer/src/: main.rs  video.rs
apps/indexer/: Cargo.toml
apps/indexer/.cargo/: config.toml
apps/indexer/src/: main.rs
apps/installer/: Cargo.toml  build.rs
apps/installer/src/: grub.rs  lib.rs  main.rs
apps/launcher/: Cargo.toml
apps/launcher/src/: main.rs
apps/lockscreen/: Cargo.toml
apps/lockscreen/src/: main.rs
apps/markdowneditor/: Cargo.toml
apps/markdowneditor/src/: main.rs
apps/musicplayer/: Cargo.toml
apps/musicplayer/src/: main.rs
apps/netscan/: Cargo.toml
apps/netscan/src/: main.rs
apps/paint/: Cargo.toml
apps/paint/src/: main.rs
apps/procexplorer/: Cargo.toml
apps/procexplorer/src/: features.rs  main.rs
apps/screenshot/: Cargo.toml
apps/screenshot/src/: main.rs
apps/settings/: Cargo.toml
apps/settings/src/: associations.rs  main.rs  remote.rs  snapshots.rs
apps/speedtest/: Cargo.toml
apps/speedtest/src/: main.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: ac97.rs  ahci.rs  apic.rs  audio_alsa.rs  audio_alsa_ctl.rs  audio_history.rs  audio_mixer.rs  audio_notify.rs  backtrace.rs  bench.rs  blkdev.rs  boot.rs  boot_timing.rs  cet.rs  cgroup.rs  cnetwork.rs  compositor.rs  console.rs  container.rs  cpu.rs  cpu_hotplug.rs  cpu_topology.rs  cpufreq.rs  cputime.rs  crypto.rs  devhotplug.rs  devpower.rs  drvmon.rs  e1000.rs  error.rs  eventlog.rs  fb.rs  font.rs  gdt.rs  hardlockup.rs  hda.rs  hpet.rs  hrtimer.rs  hypervisor.rs  idle.rs  (+79 more)
kernel/src/acpi/: fadt.rs  madt.rs  mod.rs  tables.rs
kernel/src/cap/: audit.rs  file_tags.rs  groups.rs  mod.rs  request.rs  rights.rs  table.rs
kernel/src/drm/: atomic.rs  card_fd.rs  connector.rs  crtc.rs  driver.rs  dumb_mmap.rs  edid.rs  encoder.rs  framebuffer.rs  gem.rs  hotplug.rs  mod.rs  mode.rs  plane.rs  property.rs  syscall.rs  uapi.rs  virtgpu_uapi.rs
kernel/src/fs/: a11y.rs  acl.rs  acpistat.rs  aiostat.rs  appcompat.rs  appdefaults.rs  applaunch.rs  appnotify.rs  apppermissions.rs  appregistry.rs  appsandbox.rs  appstore.rs  ar.rs  archive.rs  associations.rs  atime.rs  audiodevice.rs  audioeq.rs  audiomux.rs  audit.rs  authbroker.rs  autofix.rs  autostart.rs  backup.rs  backupsched.rs  batch.rs  battery.rs  bench.rs  binfmt.rs  blkqueue.rs  blktrace.rs  bluetooth.rs  bookmarks.rs  bootcfg.rs  bpfstat.rs  brightness.rs  budstat.rs  bzip2.rs  cache.rs  capsettings.rs  (+389 more)
kernel/src/ipc/: alsa_pcm.rs  channel.rs  completion.rs  epoll.rs  eventfd.rs  futex.rs  inotify.rs  io_ring.rs  memfd.rs  mod.rs  namespace.rs  pipe.rs  semaphore.rs  service.rs  service_limits.rs  shm.rs  signalfd.rs  stats.rs  stream_socket.rs  timer.rs  timerfd.rs
kernel/src/mm/: accounting.rs  alloc_checkpoint.rs  alloc_lat.rs  alloc_trace.rs  compact.rs  compress.rs  cow.rs  dma.rs  fault.rs  fault_inject.rs  frag_history.rs  frame.rs  frame_owner.rs  heap.rs  heap_profile.rs  hugepage.rs  integ_test.rs  kstack.rs  kswapd.rs  kvspace.rs  mempool.rs  memtype.rs  migrate_type.rs  mod.rs  oom.rs  page_age.rs  page_cache.rs  page_table.rs  pcid.rs  poison.rs  pressure.rs  protect.rs  pt_walk.rs  rlimits.rs  rmap.rs  scrub.rs  swap.rs  tlb_gather.rs  user.rs  vma.rs  (+2 more)
kernel/src/net/: arp.rs  bridge.rs  dashboard.rs  dhcp.rs  dhcpd.rs  dhcpv6.rs  dns.rs  ethernet.rs  firewall.rs  frag.rs  ftp.rs  http.rs  httpd.rs  icmp.rs  icmpv6.rs  igmp.rs  interface.rs  iperf.rs  ipv4.rs  ipv6.rs  lldp.rs  mdns.rs  mld.rs  mod.rs  nat.rs  ndisc.rs  netcat.rs  netstack_client.rs  netstat.rs  ntp.rs  pcap.rs  qos.rs  raw.rs  smtp.rs  snmp.rs  socket.rs  socks.rs  ssh.rs  syslog.rs  tcp.rs  (+10 more)
kernel/src/proc/: elf.rs  exception.rs  fork.rs  itimer.rs  linux_fd.rs  linux_sigframe.rs  linux_stack.rs  mod.rs  pcb.rs  signal.rs  spawn.rs  thread.rs  thread_clone.rs
netipc/: Cargo.toml
netipc/src/: lib.rs  ring.rs
netproto/: Cargo.toml
netproto/src/: arp.rs  checksum.rs  dhcp.rs  dns.rs  ethernet.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  lib.rs  tcp.rs  udp.rs
netring/: Cargo.toml
netring/src/: lib.rs
posix/: Cargo.toml
posix/.cargo/: config.toml
posix/src/: aio.rs  alloca.rs  ar.rs  arpa_inet.rs  arpa_nameser.rs  assert.rs  cpio.rs  crt.rs  crypt.rs  ctype.rs  dirent.rs  dlfcn.rs  endian.rs  environ.rs  epoll.rs  err.rs  errno.rs  error.rs  execinfo.rs  fcntl.rs  fcntl_ops.rs  fdtable.rs  file.rs  fmtmsg.rs  fnmatch.rs  fortify_printf.rs  fts.rs  ftw.rs  getopt.rs  glob.rs  grp.rs  iconv.rs  ifaddrs.rs  inttypes.rs  ioctl.rs  langinfo.rs  lib.rs  libgen.rs  libintl.rs  limits.rs  (+2254 more)
(+6076 files in other folders)
