[workspace]
resolver = "2"
members = [
    "kernel",
    "apps/*",
    "gui/*",
    "init/*",
    "net/*",
    "userspace/*",
    # Bare-metal x86_64-unknown-none targets (no build-std, same target
    # as the kernel). They live inside this workspace so they share
    # target/, but their per-crate .cargo/config.toml stays in place to
    # control linker flags.
    "posix",
    "toolchain/stubs",
]
exclude = [
    # Bare-metal services (target = x86_64-unknown-none). Living in
    # `services/` keeps them outside the `userspace/.cargo/config.toml`
    # build-std blast radius. Each services/* crate is built
    # independently with its own per-crate .cargo/config.toml.
    "services",
    # Empty directory (incomplete crate); skip until populated.
    "userspace/cylance-cli",
    # nushell is a self-contained upstream workspace with its own member
    # list and lockfile. Keep it out of our workspace — build via
    # `cd nushell && cargo build`.
    "nushell",
    # Zone-level cargo config directories — caught by the `*` globs in
    # `members` above; explicitly exclude them so cargo doesn't try to
    # read them as crates.
    "apps/.cargo",
    "gui/.cargo",
    "init/.cargo",
    "net/.cargo",
    "userspace/.cargo",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"

# Userspace defaults: size-optimised, abort on panic, stripped.
[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"
codegen-units = 16

[profile.dev]
panic = "abort"

# Kernel-specific overrides. cargo does not allow `lto` or `panic` in
# per-package profile sections (those are workspace-wide), but
# `opt-level`, `codegen-units`, and `strip` are allowed.
[profile.release.package.kernel]
opt-level = 3
codegen-units = 1
strip = "none"
