[workspace]
resolver = "2"
members = [
    "kernel",
    "apps/*",
    "gui/*",
    "init/*",
    "net/*",
    "userspace/*",
    # Bare-metal x86_64-unknown-none targets (no build-std, same target
    # as the kernel). They live inside this workspace so they share
    # target/, but their per-crate .cargo/config.toml stays in place to
    # control linker flags.
    "posix",
    "toolchain/stubs",
]
exclude = [
    # Bare-metal services (target = x86_64-unknown-none). Living in
    # `services/` keeps them outside the `userspace/.cargo/config.toml`
    # build-std blast radius. Each services/* crate is built
    # independently with its own per-crate .cargo/config.toml.
    "services",
    # Empty directory (incomplete crate); skip until populated.
    "userspace/cylance-cli",
    # nushell is a self-contained upstream workspace with its own member
    # list and lockfile. Keep it out of our workspace — build via
    # `cd nushell && cargo build`.
    "nushell",
    # Zone-level cargo config directories — caught by the `*` globs in
    # `members` above; explicitly exclude them so cargo doesn't try to
    # read them as crates.
    "apps/.cargo",
    "gui/.cargo",
    "init/.cargo",
    "net/.cargo",
    "userspace/.cargo",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Correctness-relevant lints stay at warn (per CLAUDE.md): they flag
# real panic/overflow risks the AI author may have missed, but they're
# pervasive in low-level code and would block the build at deny level.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"

# Pure-style pedantic lints relaxed to allow with documented rationale.
# Each of these triggers thousands of times across the kernel + posix
# layer and produces no correctness benefit — the work-to-value ratio
# doesn't justify enforcing them.  Per CLAUDE.md, individual lints may
# be suppressed with a comment explaining why; we apply that rule at
# workspace scope here so the discipline is centralised and reviewable.

# doc_markdown: ~3600 hits.  Demands backticks around every identifier
# in doc comments (`Vec`, `Result`, etc.).  Pure cosmetic; missing
# backticks never caused a bug.  Re-enable per-crate if a crate's docs
# are user-facing and need pristine markdown rendering.
doc_markdown = "allow"

# format_push_string: ~2900 hits.  Suggests rewriting
# `s.push_str(&format!("..."))` as `write!(s, "...").unwrap()`.  The
# clippy form requires the writer to be in scope and adds an unwrap;
# the readability win is negligible.
format_push_string = "allow"

# uninlined_format_args: ~2200 hits.  Suggests `format!("{x}")` over
# `format!("{}", x)`.  Style preference; the explicit form is clearer
# when arguments are non-trivial expressions and trivially auto-fixable
# when they're plain bindings, so the lint catches no real bugs.
uninlined_format_args = "allow"

# single_match_else: ~850 hits.  Suggests `if let ... else { ... }` over
# `match x { Some(y) => ..., None => ... }`.  Either form is fine; we
# don't enforce a preference.
single_match_else = "allow"

# collapsible_if: ~440 hits.  Suggests folding nested `if`s into `&&`.
# Nested form is often clearer when the inner predicate has a separate
# logical meaning from the outer guard.
collapsible_if = "allow"

# unreadable_literal: ~380 hits.  Demands `_` separators in long
# literals.  Hardware register addresses and bitmasks read fine without
# them; enforcing this across kernel constants is busywork.
unreadable_literal = "allow"

# manual_let_else: ~370 hits.  Suggests `let Some(x) = ... else { ... }`
# over `match`/`if let`-with-return.  Cosmetic; the explicit form is
# fine.
manual_let_else = "allow"

# similar_names: ~140 hits.  Triggers on hardware-register pairs like
# `pm1a`/`pm1b`, `nam_base`/`nabm_base`, `cmd_reg`/`ctl_reg`.  These
# names mirror the hardware spec; renaming them just to satisfy clippy
# obscures the mapping.
similar_names = "allow"

# items_after_statements: ~120 hits.  Suggests moving fn/const decls
# above all `let`s.  Often the function is logically local to a block
# and reads naturally where it's defined.
items_after_statements = "allow"

# match_same_arms: ~170 hits.  Suggests merging arms with identical
# bodies.  Frequently the arms enumerate distinct cases for
# documentation/exhaustiveness even when the action is the same;
# merging loses that meaning.
match_same_arms = "allow"

# missing_errors_doc / missing_panics_doc / must_use_candidate /
# missing_const_for_fn: prolific in kernel code, more useful for
# library APIs than internal kernel modules.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# module_name_repetitions: complains about `mm::MmError`,
# `fs::FsError`.  The repetition is intentional — types are imported
# unqualified and the module prefix in the type name disambiguates.
module_name_repetitions = "allow"

# struct_excessive_bools / fn_params_excessive_bools: arbitrary
# threshold flags; kernel state structs legitimately have many bools.
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"

# too_many_lines / too_many_arguments: thresholds that don't reflect
# real complexity; long match-based dispatchers in syscall handlers
# trip these without being unclear.
too_many_lines = "allow"
too_many_arguments = "allow"

# cast_possible_truncation / cast_sign_loss / cast_precision_loss /
# cast_possible_wrap: ~2000 combined hits.  In low-level code, casts
# are usually deliberate (the author knows the value fits).  Enforcing
# `TryFrom`/`checked_*` everywhere produces unwrap-laden boilerplate
# that's worse than the cast.  Leave to manual review.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# verbose_bit_mask / verbose_file_reads: stylistic preferences.
verbose_bit_mask = "allow"

# redundant_closure_for_method_calls: occasionally suggests less clear
# code (`.map(Foo::bar)` vs `.map(|x| x.bar())` when the closure form
# documents intent).
redundant_closure_for_method_calls = "allow"

# wildcard_imports: kernel modules use prelude-style wildcard imports
# (`use super::*;` in inner modules, `use registers::*;` for hardware
# register names) that this lint flags spuriously.
wildcard_imports = "allow"

# inline_always: kernel hot paths (atomic ops, port I/O, MSR access)
# legitimately need `#[inline(always)]` for performance.
inline_always = "allow"

# return_self_not_must_use: builder-pattern noise; not all builders
# need #[must_use].
return_self_not_must_use = "allow"

# needless_pass_by_value: often the right call is to take ownership
# even when the body doesn't move; clippy can't tell the difference.
needless_pass_by_value = "allow"

# Userspace defaults: size-optimised, abort on panic, stripped.
[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"
codegen-units = 16

[profile.dev]
panic = "abort"

# Kernel-specific overrides. cargo does not allow `lto` or `panic` in
# per-package profile sections (those are workspace-wide), but
# `opt-level`, `codegen-units`, and `strip` are allowed.
[profile.release.package.kernel]
opt-level = 3
codegen-units = 1
strip = "none"
