[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors = ["AI-Generated OS Project"]
description = "Microkernel for x86_64 desktop OS"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "once"] }
bitflags = "2"
log = "0.4"
# Shared kernel<->netstack IPC control-message schema (opcodes, status codes,
# request/reply encode/decode). Single source of truth with the daemon side;
# no_std, dependency-free, so it builds cleanly for the kernel's custom target.
netipc = { path = "../netipc" }

[lints]
workspace = true

# Kernel is a bare-metal binary, not a library. Host-side `cargo test`
# cannot link the kernel because it provides its own `panic_impl` lang
# item (and other no_std machinery) that conflicts with the host `std`.
# Kernel tests must run under the bare-metal target via the boot-test
# harness; disable the host test binary so `cargo test --workspace` is
# clean on a normal dev host.
[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
