[package]
name = "posix"
version = "0.1.0"
edition = "2024"
description = "POSIX compatibility library — C-compatible function signatures backed by native syscalls"

[lib]
# staticlib is for linking into OS userspace programs; rlib is for tests.
# `cargo test` only uses the rlib.
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true
