[package]
name = "contacts"
version = "0.1.0"
edition = "2024"
description = "OurOS Contacts — address book and contact manager"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
