[package]
name = "editor"
version = "0.1.0"
edition = "2024"
description = "OurOS Text Editor — graphical text editor with syntax highlighting"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
