[package]
name = "emojipicker"
version = "0.1.0"
edition = "2024"
description = "OurOS Emoji Picker — taskbar popup for emoji input"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
