[package]
name = "hexeditor"
version = "0.1.0"
edition = "2024"
description = "OurOS Hex Editor — binary file hex editor with data inspector, search, bookmarks"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
