[package]
name = "imageviewer"
version = "0.1.0"
edition = "2024"
description = "OurOS Image Viewer — photo and image viewing with zoom and slideshow"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
