[package]
name = "indexer"
version = "0.1.0"
edition = "2024"
description = "OurOS Background File Indexer — builds and maintains a searchable filesystem index"

# Standalone crate — not part of the kernel workspace.
[workspace]

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
