[package]
name = "lockscreen"
version = "0.1.0"
edition = "2024"
description = "OurOS Lock Screen — secure graphical lock screen with clock, password entry, and multi-user support"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
