[package]
name = "markdowneditor"
version = "0.1.0"
edition = "2024"
description = "OurOS Markdown Editor — split-view editor with live preview"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
