[package]
name = "musicplayer"
version = "0.1.0"
edition = "2024"
description = "OurOS Music Player — audio playback with playlist management"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
