[package]
name = "netscan"
version = "0.1.0"
edition = "2024"
description = "OurOS Network Scanner — IP/port scanning, host discovery, service detection, topology visualization"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
