[package]
name = "speedtest"
version = "0.1.0"
edition = "2024"
description = "OurOS Network Speed Test — bandwidth and latency measurement utility"

[workspace]

[dependencies]
guitk = { path = "../../gui/toolkit" }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
